tests/diag/type-mismatch-color.wisp
surface bar {
  widget clock {
    bg = 42;
  }
}
